Extractor should work now and made ExtractorTest that can extract all variations of serde based on the csvconf files